--- a/car_form.css
+++ b/car_form.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     margin: 0;
     padding: 0;
@@ -16,8 +15,6 @@ body {
 }
 
 form {
-    /* background-color: rgba(255, 255, 255, 0.8); */
-    /* Form background with opacity */
     padding: 50px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -44,8 +41,12 @@ button {
     cursor: pointer;
 }
 
+button:hover {
+    box-shadow: 0 0 10px 2px white;
+}
+
 h1 {
     color: whitesmoke;
-    margin-left: 100px;
-    margin-top: 40px;
+    margin-left: 150px;
+    margin-top: 35px;
 }
